concat different fps videos

--- a/app/src/main/res/menu/bottom_nav_items.xml
+++ b/app/src/main/res/menu/bottom_nav_items.xml
@@ -8,16 +8,16 @@
 
     <item
         android:id="@+id/navigation_about"
-        android:icon="@drawable/who_are_we_white"
+        android:icon="@drawable/ic_about_app"
         android:title="@string/about_app" />
 
     <item
         android:id="@+id/navigation_merge"
-        android:icon="@drawable/merge_white"
+        android:icon="@drawable/ic_merge"
         android:title="@string/merge" />
 
     <item
         android:id="@+id/navigation_trim"
-        android:icon="@drawable/cut_white"
+        android:icon="@drawable/ic_trim"
         android:title="@string/trim" />
 </menu>
