--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -17,7 +17,7 @@
             android:id="@+id/image_rest"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/_128sdp"
-            android:src="@drawable/about_us"
+            android:src="@drawable/ic_free_editor"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
